--- a/notebook/linear-regression.ipynb
+++ b/notebook/linear-regression.ipynb
@@ -1736,11 +1736,8 @@
       "name": "linear_regression.ipynb",
       "provenance": []
     },
-    "interpreter": {
-      "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
-    },
     "kernelspec": {
-      "display_name": "Python 3.8.10 64-bit",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -1754,7 +1751,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.7.7"
     }
   },
   "nbformat": 4,
